@@ -2,6 +2,11 @@
 Version 1.4.5.0
 =================
 
+Changes:
+- If no more sound emitters are found when trying to play a sound an there are
+  paused emitters waiting, cannibalize the first waiting emitter to be able to play
+  the sound.
+
 Fixed Bugs:
 - Fixed a crash occurring when stopping a debug session mid Scene transition.
 - Fixed a UI bug causing colors of buttons in button prompts being ignored.
